--- a/MxApiExtensions/MxApiExtensions.csproj
+++ b/MxApiExtensions/MxApiExtensions.csproj
@@ -10,26 +10,15 @@
 
     <ItemGroup>
         <PackageReference Include="ArcaneLibs" Version="1.0.0-preview6437853305.78f6d30" />
+        <PackageReference Include="EasyCompressor.LZMA" Version="1.4.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0-preview.7.23375.9" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     </ItemGroup>
-
 
     <ItemGroup>
       <ProjectReference Include="..\..\ArcaneLibs\ArcaneLibs\ArcaneLibs.csproj" />
       <ProjectReference Include="..\..\LibMatrix\LibMatrix\LibMatrix.csproj" />
       <ProjectReference Include="..\MxApiExtensions.Classes.LibMatrix\MxApiExtensions.Classes.LibMatrix.csproj" />
       <ProjectReference Include="..\MxApiExtensions.Classes\MxApiExtensions.Classes.csproj" />
-
-
-
-
     </ItemGroup>
-
-
-
-
-
-
-
 </Project>
