--- a/MxApiExtensions/appsettings.json
+++ b/MxApiExtensions/appsettings.json
@@ -29,6 +29,13 @@
         "BaseTtl": "00:01:00",
         "ExtraTtlPerState": "00:00:00.1000000"
       }
+    },
+    "DefaultUserConfiguration": {
+      "ProtocolChanges": {
+        "DisableThreads": false,
+        "DisableVoip": false,
+        "AutoFollowTombstones": false
+      }
     }
   }
 }
